--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<Meta charset="UTF-8">
-	<title>NihonTube</title>
+	<title>Nuketube - To nuke your mind</title>
 	<link rel="stylesheet" type="text/css" href="src\css\style.css">
 	<link rel="stylesheet" type="text/css" media="screen and (max-width: 575.98px)" href="src\css\less576px.css">
 	<link rel="stylesheet" type="text/css" media="screen and (min-width: 576px)" href="src\css\576px.css">
@@ -24,7 +24,7 @@
     <div class="navbar-header" name="navbarHead">
       <a class="navbar-brand" href="#">
       		<img src="src\img\logo.png" width="30" height="30" style="float: left;margin-top: -5%;">
-      		NihonTube
+      		Nuketube
   	  </a>
   	  <a href="#" class="flipkart-navbar-button float-right align-middle" name="hamburguerExpander"><div class="icono-hamburger" name="hamicon"></div></a>    
     </div>
