--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" media="screen and (min-width: 576px)" href="src\css\576px.css">
 	<link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="src\css\768px.css">
 	<link rel="stylesheet" type="text/css" media="screen and (min-width: 992px)" href="src\css\992px.css">
-	<link rel="stylesheet" type="text/css" media="screen and (min-width: 1200px)" href=https://github.com/AlisonR27/DW_IVB_A1/blob/master/src/css/1200px.css">
+	<link rel="stylesheet" type="text/css" media="screen and (min-width: 1200px)" href="src\css\1200px.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="src\js\script.js"></script>
 	<link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+	<link rel="icon" href="src\img\logo.png">
 </head>		
 <body  >
 <!-- Horizontal Bar -->
