--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<div class="block1">
 		<!-- Player -->
 		  <div class="vid">
-		  		<img id="plThumb" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/images/Sintel.jpg">
+		  		<img id="plThumb" src="src\img\thumbs\Sintel.jpg">
 		  		<h1 id="plTime">14:47</h1>
 		  		<div id="player">
                 		<video id="vidID" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/Sintel.mp4" type="video/mp4" controls>
@@ -96,7 +96,7 @@
 				<a href="#" class="troca">
 				<div class="vid1">
 					<p name="link">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4</p>
-					<div class="thumb"><Img src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/images/ElephantsDream.jpg"> <div class="preview-time"><i>10:53</i></div> </div>
+					<div class="thumb"><Img src="src\img\thumbs\ElephantsDream.jpg"> <div class="preview-time"><i>10:53</i></div> </div>
 					<div class="info">
 						<h4 id="InfoTitle">The first Blender Open Movie from 2006</h4>
 						<h6 id="InfoSubtitle">By Blender Foundation</h6>
@@ -107,7 +107,7 @@
 				<a href="#" class="troca">
 				<div class="vid1">
 					<p name="link">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/VolkswagenGTIReview.mp4</p>
-					<div class="thumb"><Img src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/images/SubaruOutbackOnStreetAndDirt.jpg"> <div class="preview-time"><i>09:53</i></div> </div>
+					<div class="thumb"><Img src="src\img\thumbs\SubaruOutbackOnStreetAndDirt.jpg"> <div class="preview-time"><i>09:53</i></div> </div>
 					<div class="info">
 						<h4 id="InfoTitle">The VW GTI Golf Review</h4>
 						<h6 id="InfoSubtitle">By Garage419</h6>
@@ -118,7 +118,7 @@
 				<a href="#" class="troca">
 				<div class="vid1">
 					<p name="link">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4</p>
-					<div class="thumb"><Img src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/images/ForBiggerBlazes.jpg"> <div class="preview-time"><i>00:15</i></div> </div>
+					<div class="thumb"><Img src="src\img\thumbs\ForBiggerBlazes.jpg"> <div class="preview-time"><i>00:15</i></div> </div>
 					<div class="info">
 						<h4 id="InfoTitle">HBO GO now works with Chromecast</h4>
 						<h6 id="InfoSubtitle">By Google</h6>
