Added an id to the nocturn mode link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<a><div class="uBl">Option 2</div></a>
 		<a><div class="uBl">Option 3</div></a>
 		<a><div class="uBl">Option 4</div></a>
-		<a><div class="uBl">Modo Noturno:</div></a>
+		<a id="noturno"><div class="uBl">Modo Noturno:</div></a>
 	</div>
 </div>
 <!-- Horizontal Bar Limit -->
