Added a mobile media querie

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<Meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="description" content="Free Sharing Videos">
+  	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
+  	<meta name="author" content="Alison Ranier Araujo de Souza">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nuketube - To nuke your mind</title>
 	<link rel="stylesheet" type="text/css" href="src\css\style.css">
+	<link rel="stylesheet" type="text/css" media="handheld and screen and (orientation: portrait)" href="src\css\portrait.css">
 	<link rel="stylesheet" type="text/css" media="screen and (max-width: 575.98px)" href="src\css\less576px.css">
 	<link rel="stylesheet" type="text/css" media="screen and (min-width: 576px)" href="src\css\576px.css">
 	<link rel="stylesheet" type="text/css" media="screen and (min-width: 768px)" href="src\css\768px.css">
