--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="src/css/style.css"/>
-	<script src="src/js/script.js">
+	<script src="src/js/script.js"/>
 </head>
 <body>
     <nav class="navbar header-top fixed-top navbar-expand-lg  navbar-dark bg-dark">
