--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title></title>
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="src/css/style.css"/>
-	<script src="src/js/script.js"/>
+	<style type="text/css">
+		body{background:#f9f9f9;}
+			#wrapper{padding:90px 15px;}
+			.navbar-expand-lg .navbar-nav.side-nav{flex-direction: column;}
+			.card{margin-bottom: 15px; border-radius:0; box-shadow: 0 3px 5px rgba(0,0,0,.1); }
+			.header-top{box-shadow: 0 3px 5px rgba(0,0,0,.1)}
+			.leftmenutrigger{display: none}
+			@media(min-width:992px) {
+			.leftmenutrigger{display: block;display: block;margin: 7px 20px 4px 0;cursor: pointer;}
+			#wrapper{padding: 90px 15px 15px 15px; }
+			.navbar-nav.side-nav.open {left:0;}
+			.navbar-nav.side-nav{background: #585f66;box-shadow: 2px 1px 2px rgba(0,0,0,.1);position:fixed;top:56px;flex-direction: column!important;left:-220px;width:200px;overflow-y:auto;bottom:0;overflow-x:hidden;padding-bottom:40px}
+			}
+			.animate{-webkit-transition:all .3s ease-in-out;-moz-transition:all .3s ease-in-out;-o-transition:all .3s ease-in-out;-ms-transition:all .3s ease-in-out;transition:all .3s ease-in-out}
+	</style>
+	<script type="text/javascript">
+		
+	</script>
 </head>
 <body>
     <nav class="navbar header-top fixed-top navbar-expand-lg  navbar-dark bg-dark">
