--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="src/css/style.css"/>
 	<script src="src/js/script.js"/>
+	<script type="text/javascript">
+		$( document ).ready(function() {
+     $('.leftmenutrigger').on('click', function(e) {
+     $('.side-nav').toggleClass("open");
+     e.preventDefault();
+    });
+});
+	</script>
 </head>
 <body>
     <nav class="navbar header-top fixed-top navbar-expand-lg  navbar-dark bg-dark">
